Push review controls to a new line on small screens (fixes Reply to Review layout issues)

--- a/src/ui/components/Icon/styles.scss
+++ b/src/ui/components/Icon/styles.scss
@@ -14,6 +14,8 @@
 .Icon {
   content: '';
   display: inline-block;
+  // Do not let flex containers shrink icons.
+  flex-shrink: 0;
   height: $default-icon-size;
   width: $default-icon-size;
 }
